# Chess

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  install_manifest.txt
cmake/: CompilerWarnings.cmake
include/: Board.h  except.h  version.h  version.h.in
src/: Board.c  Board.h  coor.h  except.h  listMove.c  listMove.h  list_move.c  list_move.h  main.c
src/Board/: Board.c  Board.h
src/listMove/: listMove.c  listMove.h
src/log/: log.c  log.h
